# AliyatRenderer

./: BGFX_MIGRATION_REFLECTION.md  CMakeLists.txt  CMakeSettings.json  ConfigResolver.cpp  Readme.md  bgfxT.cpp  client.cpp  main.cpp  project01.nsi  server.cpp  sql.cpp  test.cpp  vcpkg.json
assets/core/.problems/: p_cmake.md  p_cout&thread.md
assets/core/models/: cube.fbx  suzanne.fbx
assets/core/shaders/: 2d_sdf.sh  baseSceneWithCheckerboard.frag  baseSceneWithCheckerboard.vert  fragmentShader.glsl  screenSpace.frag  screenSpace.vert  vertexShader.glsl
demoProject/eztesthelper/: CMakeLists.txt  main.cpp
history/250417_SystemCmake/: CMakeLists.txt
history/250603_Network/: CMakeLists.txt
history/250603_Network/include/: AYTcpSession.h  ECNetworkDependence.h  IAYBaseSession.h
history/250603_Network/src/: AYTcpSession.cpp
src/: Application.cpp  Application.h  glad.c  main.cpp
src/ConfigManager/camera/: Camera.cpp  Camera.h  OrthographicCamera.h
src/Core/: core.h
src/Core/Addition/: CmakeLists.txt
src/Core/CameraSystem/: CmakeLists.txt
src/Core/Command/: CmakeLists.txt
src/Core/ConfigWrapper/: CmakeLists.txt
src/Core/ECSEngine/: CmakeLists.txt
src/Core/EngineCore/: AYEngineCore.cpp  AYEngineCore.h  CMakeLists.txt
src/Core/EngineCore/include/: AYEngineCore.h  ECRegisterModule.h
src/Core/EngineCore/src/: AYEngineCore.cpp
src/Core/EventSystem/: AYEventRegistry.cpp  AYEventRegistry.h  AYEventSystem.cpp  AYEventSystem.h  AYEventThreadPoolManager.cpp  AYEventThreadPoolManager.h  CMakeLists.txt  IAYEvent.cpp  IAYEvent.h  core_event_system.h  version.info
src/Core/EventSystem/SystemEventType/: EventWithInt.h
src/Core/EventSystem/include/: AYEventPool.h  AYEventRegistry.h  AYEventSystem.h  AYEventThreadPoolManager.h  AYEventToken.h  AYThreadPoolBase.h  ECEventDependence.h  IAYEvent.h  IAYEventSystem.h  core_event_system.h
src/Core/EventSystem/interface/: Event_CameraMove.h  Event_InputPackages.h  Event_Int.h  Event_UIPackages.h
src/Core/EventSystem/src/: AYEventPool.cpp  AYEventRegistry.cpp  AYEventSystem.cpp  AYEventThreadPoolManager.cpp  AYEventToken.cpp  AYThreadPoolBase.cpp  IAYEvent.cpp
src/Core/Foundation/: CmakeLists.txt
src/Core/GameLogic/: CmakeLists.txt
src/Core/InputSystem/: CmakeLists.txt
src/Core/Log/: CmakeLists.txt
src/Core/MaterialManager/: CmakeLists.txt
src/Core/Math/: CMakeLists.txt
src/Core/Math/include/: AYMathType.h
src/Core/Math/include/Adapter/: BGFXAdapter.h  Box2DAdapter.h  GLMAdapter.h  PhysXAdapter.h
src/Core/MemoryPool/: CMakeLists.txt
src/Core/ModuleManager/: CMakeLists.txt
src/Core/ModuleManager/include/: AYModuleRegistry.h  IAYModule.h
src/Core/ModuleManager/interface/: AYInputType.h  AYPath.h  Core.h  Mod_AVEngine.h  Mod_CameraSystem.h  Mod_CombatSystem.h  Mod_ECSEngine.h  Mod_EngineCore.h  Mod_EventSystem.h  Mod_InputSystem.h  Mod_MaterialManager.h  Mod_MemoryPool.h  Mod_PhysicsSystem.h  Mod_Renderer.h  Mod_ResourceManager.h  Mod_SceneManager.h  Mod_SoundEngine.h  Path.h  STMaterial.h  STMesh.h  STTransform.h
src/Core/ModuleManager/src/: AYModuleRegistry.cpp  AYPath.cpp
src/Core/Network/: AYNetworkManager.cpp  AYNetworkManager.h  AYTcpSession.cpp  AYTcpSession.h  AYTemplateServer.cpp  AYTemplateServer.h  CMakeLists.txt  ECNetworkDependence.h  IAYBaseSession.h  Network.hpp  Readme.md
src/Core/Network/include/: AYNetworkHandler.h  AYNetworkManager.h  AYPacket.h  AYProtocolRouter.h  AYTcpClient.h  AYTcpPacketAssembler.h  AYTcpServer.h  AYTcpSession.h  AYTemplateClient.h  ByteBuffer.h  ECNetworkDependence.h  IAYBaseClient.h  IAYBaseServer.h  STPacketHeader.h
src/Core/Network/include/Base/: IAYBaseClient.h  IAYBaseSession.h
src/Core/Network/include/Http/: AYHttpRequset.h  AYHttpServer.h  AYHttpSession.h
src/Core/Network/include/Tcp/: AYTcpClient.h  AYTcpServer.h  AYTcpSession.h
src/Core/Network/src/: AYNetworkManager.cpp  AYPacket.cpp  AYProtocolRouter.cpp  AYTcpClient.cpp  AYTcpPacketAssembler.cpp  AYTcpServer.cpp  AYTcpSession.cpp  ByteBuffer.cpp
src/Core/Network/src/Http/: AYHttpServer.cpp
src/Core/Network/src/Tcp/: AYTcpClient.cpp  AYTcpPacketAssembler.cpp  AYTcpServer.cpp  AYTcpSession.cpp
src/Core/PhysicsSystem/: CmakeLists.txt
src/Core/Renderer/: CmakeLists.txt
src/Core/ResourceManager/: AYAsyncTracker.h  AYResourceHandle.h  AYResourceManager.cpp  AYResourceManager.h  AYResourceRegistry.h  CMakeLists.txt  IAYResource.h  IAYResourceLoader.h  Resource.hpp  STResourceLoadRequest.h  UTFileWatch.h
src/Core/ResourceManager/include/: AYAsyncTracker.h  AYResourceHandle.h  AYResourceManager.h  AYResourceRegistry.h  IAYResource.h  IAYResourceLoader.h  STAsyncTask.h  STResourceLoadRequest.h  UFileHandler.h
src/Core/ResourceManager/interface/: AYAudio.h  AYAudioStream.h  AYModel.h  AYTexture.h  AYVideo.h  ECAVIDependence.h  Event_ResourceLoadAsync.h  IAYAudioSource.h  STMaterial.h  STMesh.h
src/Core/ResourceManager/src/: AYAudio.cpp  AYAudioStream.cpp  AYResourceManager.cpp  AYVideo.cpp
src/Core/SQL/: CmakeLists.txt
src/Core/SceneManager/: CmakeLists.txt
src/Core/SoundEngine/: CmakeLists.txt
src/Core/SystemEventType/: Event_ResourceLoadAsync.h
src/Project0001/: CmakeLists.txt  main.cpp
src/ResourceManager/: Resource.hpp
src/application/: Application.cpp  Application.h
src/camera/: Camera.h  OrthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h
src/controller/: CameraController.h
src/core/: core.h  main.cpp
src/object/: Object.h
src/pool/: Pool.cpp  Pool.h
src/scene/: BaseSceneWithCheckerboard.cpp
src/shader/: Shader.cpp  Shader.h
src/shape/: Model.cpp  Model.h
src/texture/: Texture.cpp  Texture.h
src/unused/: AbstractFactory.hpp  Adapter.hpp  Decorator.hpp  Factory.hpp  Observer.hpp  Strategy.hpp
src/unused/camera/: Camera.cpp  (+4 more)
unitest/EventSystem/: UnitTest.cpp
unitest/MemoryPool/: Unitest.cpp
unitest/Network/: UnitTest.cpp
unitest/ResourceManager/: UnitTest.cpp
utils/: CMakeLists.txt  Readme.md
utils/include/: Funcs_Network.hpp  Funcs_Timer.hpp  checkError.h
utils/src/: checkError.cpp
utils/unused/: test.cpp
(+244 files in other folders)
